# phgnuct

./: .gitmodules  LICENSE  README.md  aaai.ipynb  pyproject.toml  test.ipynb
experiments/: batch.pbs  run_uct.py  ttest.py
experiments/domains/: childsnack.py  depot.py  satellite.py  transport.py
experiments/results/: carpenter_data.csv  gp3_data.csv  zaratan_data.csv
phgn_planner/: config.py  factored_tree.py  factored_uct.py  unfactored_tree.py  unfactored_uct.py
