[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "PHGN_UCT"
version = "0.1.0"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "numpy",
    "networkx",
    "pyparsing",
    "ConfigSpace",
]

[tool.hatch.build.targets.wheel]
packages = [
    "phgn_planner",
    "unified_planning/unified_planning",
]